--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "module": "CommonJS",
+    "outDir": "./public"
+  },
   "exclude": ["node_modules", "test", "public", "**/*spec.ts"]
 }
